--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Savi Interactivo</title>
   </head>
-  <body>
+  <body class="" >
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
